# ttyfb

./: .gitignore  API.txt  CMakeLists.txt  README.md  build.sh
inc/: ttyfb.h  ttyui.h
src/: img.c  main.c  ttyfb.c  ttyui.c
